[project]
name = "samv3-mock"
version = "0.1.0"
description = "Local SAM2 image segmentation app with blur and color fill effects"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.9.0",
    "streamlit-image-coordinates>=0.4.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
    "sam-2 @ git+https://github.com/facebookresearch/sam2.git",
]

[tool.uv]
package = false
